@@ -102,7 +102,7 @@ License along with this library.  If not, see <http://www.gnu.org/licenses/>.
         type: '@'
       },
       transclude: true,
-      template: '' + '<audio controls="controls" preload="none" ng-hide="cantPlay()">' + '<source src="{{ src }}">' + '</audio>' + '<a href="{{ src }}" class="button" ng-show="cantPlay()" ' + 'ng-transclude></a>',
+      template: '' + '<audio controls="controls" preload="none" ng-hide="cantPlay()">' + '<source ng-src="{{ src|trustUrl }}">' + '</audio>' + '<a ng-href="{{ src|trustUrl }}" class="button" ng-show="cantPlay()" ' + 'ng-transclude></a>',
       link: function(scope, elm, attrs) {
         var cantPlay, source;
         source = elm.children().children('source')[0];
@@ -929,6 +929,40 @@ License along with this library.  If not, see <http://www.gnu.org/licenses/>.
           caption = data.caption;
           return $(elm).fadeIn().css("display", "inline");
         });
+      };
+    }
+  ]);
+
+}).call(this);
+
+// Generated by CoffeeScript 1.6.3
+/*
+
+ownCloud - News
+
+@author Bernhard Posselt
+@copyright 2012 Bernhard Posselt dev@bernhard-posselt.com
+
+This library is free software; you can redistribute it and/or
+modify it under the terms of the GNU AFFERO GENERAL PUBLIC LICENSE
+License as published by the Free Software Foundation; either
+version 3 of the License, or any later version.
+
+This library is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU AFFERO GENERAL PUBLIC LICENSE for more details.
+
+You should have received a copy of the GNU Affero General Public
+License along with this library.  If not, see <http://www.gnu.org/licenses/>.
+*/
+
+
+(function() {
+  angular.module('News').filter('trustUrl', [
+    '$sce', function($sce) {
+      return function(url) {
+        return $sce.trustAsResourceUrl(url);
       };
     }
   ]);
