@@ -5,7 +5,8 @@ owncloud-news (2.001)
 * Require ownCloud 6.0.3
 * Remove html tags from feed titles
 * Port to built in core App Framework and thus removing the need to install the App Framework
-* Add experimental webproxy support 
+* Fix bug that would break news if a feed contains audio enclosures
+* Prepare news to work with proxies once [Simple Pie is patched](https://github.com/simplepie/simplepie/pull/360)
 
 owncloud-news (1.808)
 * Also focus article area when clicking on all unread link
